--- a/Dog_App.ipynb
+++ b/Dog_App.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Puppy Palooza \n",
+    "\n",
+    "Do you have a super cute dog? ✅ Do you know what breed it is? 🚫 \n",
+    "Then you've come to the right place. Take a pic of the adorable furr ball and click 'upload' to classify it. (Important: This only holds roughly the top 30 dog breeds listed by the American Kenel Club. It will not give a sensible answer for cats."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,16 +18,6 @@
    "source": [
     "from fastai.vision.all import *\n",
     "from fastai.vision.widgets import *"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Puppy Palooza \n",
-    "\n",
-    "Do you have a super cute dog? ✅ Do you know what breed it is? 🚫 \n",
-    "Then you've come to the right place. Take a pic of the adorable fur ball and click 'upload' to classify it. (Important: this only handles German Shepard, Golden Retriever, and Labrador Retriever. It will not give a sensible answer for cats."
    ]
   },
   {
@@ -63,18 +63,16 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "display_data",
      "data": {
+      "text/plain": "VBox(children=(Label(value=&#39;Select your puppy!&#39;), FileUpload(value={}, description=&#39;Upload&#39;), Output(), Label(…",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b787e2acb994b8692eb47b7bb4e97e8",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value='Select your puppy!'), FileUpload(value={}, description='Upload'), Output(), Label(…"
-      ]
+       "version_minor": 0,
+       "model_id": "b9f255b5500141ceb1fb623c46644dfb"
+      }
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     }
    ],
    "source": [
@@ -83,9 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name &#39;out&#39; is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m&lt;ipython-input-6-0d4969ded745&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mYouTubeVideo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----&gt; 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mYouTubeVideo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m&#39;505w0AVDnjI&#39;\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name &#39;out&#39; is not defined"
+     ]
+    }
+   ],
    "source": [
     "from IPython.display import YouTubeVideo\n",
     "with out:\n",
@@ -109,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.3-final"
   },
   "toc": {
    "base_numbering": 1,
