--- a/Dog_App.ipynb
+++ b/Dog_App.ipynb
@@ -1,18 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Puppy Palooza \n",
-    "\n",
-    "Do you have a super cute dog? ✅ Do you know what breed it is? 🚫 \n",
-    "Then you've come to the right place. Take a pic of the adorable furr ball and click 'upload' to classify it. (Important: This only holds roughly the top 30 dog breeds listed by the American Kenel Club. It will not give a sensible answer for cats."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +59,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b9f255b5500141ceb1fb623c46644dfb"
+       "model_id": "306f02c4f70549faa402c4ba9e57d3f8"
       }
      },
      "metadata": {}
@@ -81,25 +71,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name &#39;out&#39; is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m&lt;ipython-input-6-0d4969ded745&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mYouTubeVideo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----&gt; 2\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mYouTubeVideo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m&#39;505w0AVDnjI&#39;\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name &#39;out&#39; is not defined"
-     ]
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Output(layout=Layout(border=&#39;1px solid black&#39;), outputs=({&#39;output_type&#39;: &#39;stream&#39;, &#39;name&#39;: &#39;stdout&#39;, &#39;text&#39;: &#39;…",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "36439c9ec4b94714ad63cf5ea66ac709"
+      }
+     },
+     "metadata": {}
     }
    ],
    "source": [
     "from IPython.display import YouTubeVideo\n",
-    "with out:\n",
-    "    display(YouTubeVideo('505w0AVDnjI'))"
+    "\n",
+    "out = widgets.Output(layout={'border': '1px solid black'})\n",
+    "out.append_stdout('Puppies!!!')\n",
+    "out.append_display_data(YouTubeVideo('505w0AVDnjI'))\n",
+    "out"
    ]
   }
  ],
