--- a/Dog_App.ipynb
+++ b/Dog_App.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,17 @@
    ]
   },
   {
+   "source": [
+    "# Puppy Palooza!!!\n",
+    "\n",
+    "Do you have a super cute dog? ✅ Do you know what breed it is? 🚫 Then you've come to the right place. Take a pic of the adorable furr ball and click 'upload' to classify it. (Important: This only holds roughly the top 30 dog breeds listed by the American Kenel Club) It will not give a sensible answer for cats."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +68,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "306f02c4f70549faa402c4ba9e57d3f8"
+       "model_id": "e018aadaf0594a23bfed79bfcb6d3590"
       }
      },
      "metadata": {}
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +90,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "36439c9ec4b94714ad63cf5ea66ac709"
+       "model_id": "e556e24469534f8491e820941f118f77"
       }
      },
      "metadata": {}
