--- a/Dogs.ipynb
+++ b/Dogs.ipynb
@@ -1170,7 +1170,7 @@
       },
       "source": [
         "## Checking to see if any files failed\n",
-        "In this case only a 32 did did"
+        "In this case only a 32 files failed, which is less 1%"
       ]
     },
     {
